pysysml2/grammar/distpy/SysML2Parser.py
# Generated from SysML2.g4 by ANTLR 4.10
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class SysML2Parser ( Parser ):

    grammarFileName = "SysML2.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'{'", "'}'", "';'", "','", "'='", "'.'", 
                     "':'", "'*'", "'about'", "'actor'", "'attribute'", 
                     "'case'", "'comment'", "'connection'", "'connect'", 
                     "'def'", "'doc'", "'end'", "'enum'", "'from'", "'import'", 
                     "'include'", "'item'", "'message'", "'objective'", 
                     "'package'", "'part'", "'port'", "'ref'", "'redefines'", 
                     "'specializes'", "'subject'", "'subsets'", "'::'", 
                     "':>>'", "':>'", "'to'", "'use'", "'in'", "'out'", 
                     "'of'", "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "'null'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "KW_ABOUT", "KW_ACTOR", "KW_ATTRIBUTE", 
                      "KW_CASE", "KW_COMMENT", "KW_CONNECTION", "KW_CONNECT", 
                      "KW_DEF", "KW_DOC", "KW_END", "KW_ENUM", "KW_FROM", 
                      "KW_IMPORT", "KW_INCLUDE", "KW_ITEM", "KW_MESSAGE", 
                      "KW_OBJECTIVE", "KW_PACKAGE", "KW_PART", "KW_PORT", 
                      "KW_REF", "KW_REDEFINES", "KW_SPECIALIZES", "KW_SUBJECT", 
                      "KW_SUBSETS", "KW_SYM_FQN", "KW_SYM_REDEFINES", "KW_SYM_SUBSETS", 
                      "KW_TO", "KW_USE", "KW_IN", "KW_OUT", "KW_OF", "CONSTANT", 
                      "TYPE", "ID", "INTEGER", "REAL", "BOOL", "STRING", 
                      "MULTIPLICITY", "NULL", "WS", "NOTE", "COMMENT_LONG" ]

    RULE_model = 0
    RULE_element = 1
    RULE_namespace = 2
    RULE_sysml2_package = 3
    RULE_part_blk = 4
    RULE_part = 5
    RULE_part_def = 6
    RULE_part_def_specializes = 7
    RULE_port = 8
    RULE_port_def = 9
    RULE_port_blk = 10
    RULE_use_case_blk = 11
    RULE_use_case_def = 12
    RULE_part_objective_blk = 13
    RULE_objective_def = 14
    RULE_subject_def = 15
    RULE_include = 16
    RULE_include_blk = 17
    RULE_message = 18
    RULE_message_expr = 19
    RULE_feature = 20
    RULE_connection = 21
    RULE_connection_blk = 22
    RULE_end_part = 23
    RULE_enum_def = 24
    RULE_enum_value = 25
    RULE_connect = 26
    RULE_connect_expr = 27
    RULE_feature_attribute_def = 28
    RULE_feature_attribute_redefines = 29
    RULE_feature_part_specializes = 30
    RULE_feature_part_specializes_subsets = 31
    RULE_feature_item_def = 32
    RULE_feature_item_ref = 33
    RULE_feature_actor_specializes = 34
    RULE_comment = 35
    RULE_comment_unnamed = 36
    RULE_comment_named = 37
    RULE_comment_named_about = 38
    RULE_doc = 39
    RULE_doc_unnamed = 40
    RULE_doc_named = 41
    RULE_statement = 42
    RULE_import_package = 43

    ruleNames =  [ "model", "element", "namespace", "sysml2_package", "part_blk", 
                   "part", "part_def", "part_def_specializes", "port", "port_def", 
                   "port_blk", "use_case_blk", "use_case_def", "part_objective_blk", 
                   "objective_def", "subject_def", "include", "include_blk", 
                   "message", "message_expr", "feature", "connection", "connection_blk", 
                   "end_part", "enum_def", "enum_value", "connect", "connect_expr", 
                   "feature_attribute_def", "feature_attribute_redefines", 
                   "feature_part_specializes", "feature_part_specializes_subsets", 
                   "feature_item_def", "feature_item_ref", "feature_actor_specializes", 
                   "comment", "comment_unnamed", "comment_named", "comment_named_about", 
                   "doc", "doc_unnamed", "doc_named", "statement", "import_package" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    KW_ABOUT=9
    KW_ACTOR=10
    KW_ATTRIBUTE=11
    KW_CASE=12
    KW_COMMENT=13
    KW_CONNECTION=14
    KW_CONNECT=15
    KW_DEF=16
    KW_DOC=17
    KW_END=18
    KW_ENUM=19
    KW_FROM=20
    KW_IMPORT=21
    KW_INCLUDE=22
    KW_ITEM=23
    KW_MESSAGE=24
    KW_OBJECTIVE=25
    KW_PACKAGE=26
    KW_PART=27
    KW_PORT=28
    KW_REF=29
    KW_REDEFINES=30
    KW_SPECIALIZES=31
    KW_SUBJECT=32
    KW_SUBSETS=33
    KW_SYM_FQN=34
    KW_SYM_REDEFINES=35
    KW_SYM_SUBSETS=36
    KW_TO=37
    KW_USE=38
    KW_IN=39
    KW_OUT=40
    KW_OF=41
    CONSTANT=42
    TYPE=43
    ID=44
    INTEGER=45
    REAL=46
    BOOL=47
    STRING=48
    MULTIPLICITY=49
    NULL=50
    WS=51
    NOTE=52
    COMMENT_LONG=53

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.10")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ModelContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(SysML2Parser.EOF, 0)

        def element(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SysML2Parser.ElementContext)
            else:
                return self.getTypedRuleContext(SysML2Parser.ElementContext,i)


        def getRuleIndex(self):
            return SysML2Parser.RULE_model

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterModel" ):
                listener.enterModel(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitModel" ):
                listener.exitModel(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitModel" ):
                return visitor.visitModel(self)
            else:
                return visitor.visitChildren(self)




    def model(self):

        localctx = SysML2Parser.ModelContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_model)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 91
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << SysML2Parser.KW_ACTOR) | (1 << SysML2Parser.KW_ATTRIBUTE) | (1 << SysML2Parser.KW_COMMENT) | (1 << SysML2Parser.KW_CONNECTION) | (1 << SysML2Parser.KW_CONNECT) | (1 << SysML2Parser.KW_DOC) | (1 << SysML2Parser.KW_ENUM) | (1 << SysML2Parser.KW_IMPORT) | (1 << SysML2Parser.KW_ITEM) | (1 << SysML2Parser.KW_PACKAGE) | (1 << SysML2Parser.KW_PART) | (1 << SysML2Parser.KW_PORT) | (1 << SysML2Parser.KW_REF) | (1 << SysML2Parser.KW_USE) | (1 << SysML2Parser.KW_IN) | (1 << SysML2Parser.KW_OUT) | (1 << SysML2Parser.COMMENT_LONG))) != 0):
                self.state = 88
                self.element()
                self.state = 93
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 94
            self.match(SysML2Parser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ElementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def namespace(self):
            return self.getTypedRuleContext(SysML2Parser.NamespaceContext,0)


        def feature(self):
            return self.getTypedRuleContext(SysML2Parser.FeatureContext,0)


        def comment(self):
            return self.getTypedRuleContext(SysML2Parser.CommentContext,0)


        def doc(self):
            return self.getTypedRuleContext(SysML2Parser.DocContext,0)


        def statement(self):
            return self.getTypedRuleContext(SysML2Parser.StatementContext,0)


        def port(self):
            return self.getTypedRuleContext(SysML2Parser.PortContext,0)


        def enum_def(self):
            return self.getTypedRuleContext(SysML2Parser.Enum_defContext,0)


        def getRuleIndex(self):
            return SysML2Parser.RULE_element

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterElement" ):
                listener.enterElement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitElement" ):
                listener.exitElement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitElement" ):
                return visitor.visitElement(self)
            else:
                return visitor.visitChildren(self)




    def element(self):

        localctx = SysML2Parser.ElementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_element)
        try:
            self.state = 103
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 96
                self.namespace()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 97
                self.feature()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 98
                self.comment()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 99
                self.doc()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 100
                self.statement()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 101
                self.port()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 102
                self.enum_def()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class NamespaceContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def sysml2_package(self):
            return self.getTypedRuleContext(SysML2Parser.Sysml2_packageContext,0)


        def part(self):
            return self.getTypedRuleContext(SysML2Parser.PartContext,0)


        def use_case_def(self):
            return self.getTypedRuleContext(SysML2Parser.Use_case_defContext,0)


        def comment(self):
            return self.getTypedRuleContext(SysML2Parser.CommentContext,0)


        def doc(self):
            return self.getTypedRuleContext(SysML2Parser.DocContext,0)


        def port(self):
            return self.getTypedRuleContext(SysML2Parser.PortContext,0)


        def connect(self):
            return self.getTypedRuleContext(SysML2Parser.ConnectContext,0)


        def connection(self):
            return self.getTypedRuleContext(SysML2Parser.ConnectionContext,0)


        def enum_def(self):
            return self.getTypedRuleContext(SysML2Parser.Enum_defContext,0)


        def getRuleIndex(self):
            return SysML2Parser.RULE_namespace

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNamespace" ):
                listener.enterNamespace(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNamespace" ):
                listener.exitNamespace(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNamespace" ):
                return visitor.visitNamespace(self)
            else:
                return visitor.visitChildren(self)




    def namespace(self):

        localctx = SysML2Parser.NamespaceContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_namespace)
        try:
            self.state = 114
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 105
                self.sysml2_package()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 106
                self.part()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 107
                self.use_case_def()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 108
                self.comment()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 109
                self.doc()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 110
                self.port()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 111
                self.connect()
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 112
                self.connection()
                pass

            elif la_ == 9:
                self.enterOuterAlt(localctx, 9)
                self.state = 113
                self.enum_def()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Sysml2_packageContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def KW_PACKAGE(self):
            return self.getToken(SysML2Parser.KW_PACKAGE, 0)

        def ID(self):
            return self.getToken(SysML2Parser.ID, 0)

        def namespace(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SysML2Parser.NamespaceContext)
            else:
                return self.getTypedRuleContext(SysML2Parser.NamespaceContext,i)


        def getRuleIndex(self):
            return SysML2Parser.RULE_sysml2_package

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSysml2_package" ):
                listener.enterSysml2_package(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSysml2_package" ):
                listener.exitSysml2_package(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSysml2_package" ):
                return visitor.visitSysml2_package(self)
            else:
                return visitor.visitChildren(self)




    def sysml2_package(self):

        localctx = SysML2Parser.Sysml2_packageContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_sysml2_package)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 116
            self.match(SysML2Parser.KW_PACKAGE)
            self.state = 117
            self.match(SysML2Parser.ID)
            self.state = 118
            self.match(SysML2Parser.T__0)
            self.state = 122
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << SysML2Parser.KW_ACTOR) | (1 << SysML2Parser.KW_ATTRIBUTE) | (1 << SysML2Parser.KW_COMMENT) | (1 << SysML2Parser.KW_CONNECTION) | (1 << SysML2Parser.KW_CONNECT) | (1 << SysML2Parser.KW_DOC) | (1 << SysML2Parser.KW_ENUM) | (1 << SysML2Parser.KW_ITEM) | (1 << SysML2Parser.KW_PACKAGE) | (1 << SysML2Parser.KW_PART) | (1 << SysML2Parser.KW_PORT) | (1 << SysML2Parser.KW_REF) | (1 << SysML2Parser.KW_USE) | (1 << SysML2Parser.KW_IN) | (1 << SysML2Parser.KW_OUT) | (1 << SysML2Parser.COMMENT_LONG))) != 0):
                self.state = 119
                self.namespace()
                self.state = 124
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 125
            self.match(SysML2Parser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Part_blkContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def feature(self):
            return self.getTypedRuleContext(SysML2Parser.FeatureContext,0)


        def comment(self):
            return self.getTypedRuleContext(SysML2Parser.CommentContext,0)


        def doc(self):
            return self.getTypedRuleContext(SysML2Parser.DocContext,0)


        def part(self):
            return self.getTypedRuleContext(SysML2Parser.PartContext,0)


        def port(self):
            return self.getTypedRuleContext(SysML2Parser.PortContext,0)


        def connect(self):
            return self.getTypedRuleContext(SysML2Parser.ConnectContext,0)


        def connection(self):
            return self.getTypedRuleContext(SysML2Parser.ConnectionContext,0)


        def enum_def(self):
            return self.getTypedRuleContext(SysML2Parser.Enum_defContext,0)


        def getRuleIndex(self):
            return SysML2Parser.RULE_part_blk

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPart_blk" ):
                listener.enterPart_blk(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPart_blk" ):
                listener.exitPart_blk(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPart_blk" ):
                return visitor.visitPart_blk(self)
            else:
                return visitor.visitChildren(self)




    def part_blk(self):

        localctx = SysML2Parser.Part_blkContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_part_blk)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 135
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.state = 127
                self.feature()
                pass

            elif la_ == 2:
                self.state = 128
                self.comment()
                pass

            elif la_ == 3:
                self.state = 129
                self.doc()
                pass

            elif la_ == 4:
                self.state = 130
                self.part()
                pass

            elif la_ == 5:
                self.state = 131
                self.port()
                pass

            elif la_ == 6:
                self.state = 132
                self.connect()
                pass

            elif la_ == 7:
                self.state = 133
                self.connection()
                pass

            elif la_ == 8:
                self.state = 134
                self.enum_def()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PartContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def part_def(self):
            return self.getTypedRuleContext(SysML2Parser.Part_defContext,0)


        def part_def_specializes(self):
            return self.getTypedRuleContext(SysML2Parser.Part_def_specializesContext,0)


        def getRuleIndex(self):
            return SysML2Parser.RULE_part

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPart" ):
                listener.enterPart(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPart" ):
                listener.exitPart(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPart" ):
                return visitor.visitPart(self)
            else:
                return visitor.visitChildren(self)




    def part(self):

        localctx = SysML2Parser.PartContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_part)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 139
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.state = 137
                self.part_def()
                pass

            elif la_ == 2:
                self.state = 138
                self.part_def_specializes()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Part_defContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def KW_PART(self):
            return self.getToken(SysML2Parser.KW_PART, 0)

        def ID(self):
            return self.getToken(SysML2Parser.ID, 0)

        def KW_DEF(self):
            return self.getToken(SysML2Parser.KW_DEF, 0)

        def part_blk(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SysML2Parser.Part_blkContext)
            else:
                return self.getTypedRuleContext(SysML2Parser.Part_blkContext,i)


        def getRuleIndex(self):
            return SysML2Parser.RULE_part_def

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPart_def" ):
                listener.enterPart_def(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPart_def" ):
                listener.exitPart_def(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPart_def" ):
                return visitor.visitPart_def(self)
            else:
                return visitor.visitChildren(self)




    def part_def(self):

        localctx = SysML2Parser.Part_defContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_part_def)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 160
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,9,self._ctx)
            if la_ == 1:
                self.state = 141
                self.match(SysML2Parser.KW_PART)
                self.state = 143
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==SysML2Parser.KW_DEF:
                    self.state = 142
                    self.match(SysML2Parser.KW_DEF)


                self.state = 145
                self.match(SysML2Parser.ID)
                self.state = 146
                self.match(SysML2Parser.T__0)
                self.state = 150
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << SysML2Parser.KW_ACTOR) | (1 << SysML2Parser.KW_ATTRIBUTE) | (1 << SysML2Parser.KW_COMMENT) | (1 << SysML2Parser.KW_CONNECTION) | (1 << SysML2Parser.KW_CONNECT) | (1 << SysML2Parser.KW_DOC) | (1 << SysML2Parser.KW_ENUM) | (1 << SysML2Parser.KW_ITEM) | (1 << SysML2Parser.KW_PART) | (1 << SysML2Parser.KW_PORT) | (1 << SysML2Parser.KW_REF) | (1 << SysML2Parser.KW_IN) | (1 << SysML2Parser.KW_OUT) | (1 << SysML2Parser.COMMENT_LONG))) != 0):
                    self.state = 147
                    self.part_blk()
                    self.state = 152
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 153
                self.match(SysML2Parser.T__1)
                pass

            elif la_ == 2:
                self.state = 154
                self.match(SysML2Parser.KW_PART)
                self.state = 156
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==SysML2Parser.KW_DEF:
                    self.state = 155
                    self.match(SysML2Parser.KW_DEF)

